--- a/src/app/pages/report-generation/fee-reports/fee-reports.component.html
+++ b/src/app/pages/report-generation/fee-reports/fee-reports.component.html
@@ -10,7 +10,7 @@
                                 <label>Filter By</label>
                             </div>
                             <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Select Filter Option">
+                                <nb-select placeholder="Select Filter Option">
                                     <nb-option value="subject">None(All Records)</nb-option>
                                     <nb-option value="subject">Course Level</nb-option>
                                     <nb-option value="subject">Course</nb-option>
@@ -33,7 +33,7 @@
                                 <label>Course Level</label>
                             </div>
                             <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Choose Course Level">
+                                <nb-select placeholder="Choose Course Level">
                                     <nb-option value="advance_level">Advance Level</nb-option>
                                     <nb-option value="ordinary_level">Ordinary Level</nb-option>
                                 </nb-select>
@@ -43,7 +43,7 @@
                 </ul>
             </div><br>
 
-            <!-- <div class="card">
+            <div class="card">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         <div class="row">
@@ -51,7 +51,7 @@
                                 <label>Teacher</label>
                             </div>
                             <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Choose Teacher">
+                                <nb-select placeholder="Choose Teacher">
                                     <nb-option value="advance_level">Keerthi Kaariyavasam</nb-option>
                                     <nb-option value="ordinary_level">Muzain Mubarak</nb-option>
                                     <nb-option value="ordinary_level">Naiomi Ekanaayaka</nb-option>
@@ -62,7 +62,7 @@
                         </div>
                     </li>
                 </ul>
-            </div><br> -->
+            </div><br>
 
             <div class="card">
                 <ul class="list-group list-group-flush">
@@ -72,7 +72,7 @@
                                 <label>Report Timespan</label>
                             </div>
                             <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Choose Timespan of report">
+                                <nb-select placeholder="Choose Timespan of report">
                                     <nb-option value="advance_level">Select By Month</nb-option>
                                     <nb-option value="ordinary_level">Select By Date Range</nb-option>
                                     <nb-option value="ordinary_level">All Time</nb-option>
